--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    lintOptions{
+        abortOnError false
+    }
     defaultConfig {
         applicationId "com.example.moviecataloge"
         minSdkVersion 21
