--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,8 @@ android {
     buildTypes {
 
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-
         }
     }
     testOptions {
