--- a/detail/src/main/AndroidManifest.xml
+++ b/detail/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.moviecataloge.presentation.ui.home.MainActivity" />
         </activity>
-        <activity android:name=".DetailTvshowActivity" android:label="@string/tvshow">
+        <activity android:name=".DetailTvShowActivity" android:label="@string/tvshow">
             <intent-filter>
                 <action android:name="com.example.moviecatalogue.detail.DetailTvshowActivity"/>
                 <category android:name="android.intent.category.DEFAULT"/>
