--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,14 @@ ext {
     koin_version = "2.1.6"
     lifecycle_version = "2.2.0"
     kotlin_coroutines_version = "1.3.9"
+
+    lottie_version = "3.4.1"
+
+    shimmer_version = "0.5.0"
 }
 
 buildscript {
-    ext.kotlin_version = "1.4.10"
+    ext.kotlin_version = "1.4.21"
     repositories {
         google()
         jcenter()
