--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -29,4 +29,8 @@ dependencies{
     implementation "org.koin:koin-android-viewmodel:$koin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+
+
+    implementation "com.airbnb.android:lottie:$lottie_version"
+    implementation "com.facebook.shimmer:shimmer:$shimmer_version"
 }
